kubernetes/apps/default/authentik/outposts/outpost-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost-internal
  namespace: default
  labels:
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/instance: authentik-outpost-internal
    app.kubernetes.io/managed-by: goauthentik.io
    # renovate: datasource=docker depName=ghcr.io/goauthentik/proxy
    app.kubernetes.io/version: 2026.5.4
    goauthentik.io/outpost-name: authentik-outpost-internal
    goauthentik.io/outpost-type: proxy
    goauthentik.io/outpost-uuid: 7345384ad9d5492e83b0243e68d8ad6a
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authentik-outpost-internal
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
    - name: https
      port: 9443
      protocol: TCP
      targetPort: https
    - name: http-metrics
      port: 9300
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost-internal
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: &secret authentik-secret
  labels:
    app.kubernetes.io/name: authentik-outpost-internal
    app.kubernetes.io/component: outpost
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-outpost-internal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-outpost-internal
        app.kubernetes.io/component: outpost
    spec:
      containers:
        - name: outpost
          image: ghcr.io/goauthentik/proxy:2026.5.4
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-outpost-internal
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: authentik-outpost-internal
          port: 9000
